--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "dialogue-rs"
 version = "0.1.0"
 edition = "2021"
+description = "A Rust library for parsing dialogue scripts."
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/Velfi/dialogue-rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
