--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,2 @@
-[package]
-name = "dialogue-rs"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-anyhow = "1.0.70"
-pest = "2.6"
-pest_derive = "2.6"
-pretty_assertions = "1.3.0"
-thiserror = "1.0.40"
-wasm-bindgen = "0.2.84"
+[workspace]
+members = ["dialogue-rs", "dialogue-rs-cli"]
